--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Kevin Deniz" />
                             <h4>Kevin Deniz</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
@@ -238,9 +238,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Hector Morales" />
                             <h4>Hector Morales</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.researchgate.net/profile/Hector_Adan_Morales_Lugo" target="_blank" data-toggle="tooltip" title="ResearchGate">
+                                <i class="fab fa-researchgate"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
@@ -248,9 +248,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Diego Ahumada" />
                             <h4>Diego Ahumada</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
@@ -258,9 +258,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Paola Santollo" />
                             <h4>Paola Santollo</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
@@ -268,9 +268,12 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Angel Esparza" />
                             <h4>Angel Esparza</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/AngeEpza" target="_blank" data-toggle="tooltip" title="Twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/angel-esparza-b64a411b6/" target="_blank" data-toggle="tooltip" title="LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
@@ -278,9 +281,12 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Marco Morales" />
                             <h4>Marco Morales</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/KGMorales19" target="_blank" data-toggle="tooltip" title="Twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/marco-antonio-morales-negrete-4184951a0/" target="_blank" data-toggle="tooltip" title="LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
@@ -288,19 +294,31 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Sergio Diaz" />
                             <h4>Sergio Diaz</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sergiojulian" target="_blank" data-toggle="tooltip" title="Twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/5ergioDiaz" target="_blank" data-toggle="tooltip" title="Github">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/sergiodiaztopete/" target="_blank" data-toggle="tooltip" title="LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Mario Gutiérrez" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Mario Gutiérrez">
                             <h4>Mario Gutiérrez</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://marioagtzc.github.io/Portfolio/" target="_blank" data-toggle="tooltip" title="Portfolio">
+                                <i class="fas fa-globe"></i>
+                            </a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/MarioAGtzC" target="_blank" data-toggle="tooltip" title="Github">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/mario-alberto-guti%C3%A9rrez-covian-992570187/" target="_blank" data-toggle="tooltip" title="LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
