--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Diego Ahumada" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/diego.jpeg" alt="Diego Ahumada" />
                             <h4>Diego Ahumada</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
