--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-6">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Kevin Deniz" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Kevin.jpg" alt="Kevin Deniz" />
                             <h4>Kevin Deniz</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -235,7 +235,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Hector Morales" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Hector.jpg" alt="Hector Morales" />
                             <h4>Hector Morales</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.researchgate.net/profile/Hector_Adan_Morales_Lugo" target="_blank" data-toggle="tooltip" title="ResearchGate">
@@ -245,7 +245,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/diego.jpeg" alt="Diego Ahumada" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Diego.jpg" alt="Diego Ahumada" />
                             <h4>Diego Ahumada</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -255,7 +255,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Paola Santollo" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Paola.jpg" alt="Paola Santollo" />
                             <h4>Paola Santollo</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Angel Esparza" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Angel.jpg" alt="Angel Esparza" />
                             <h4>Angel Esparza</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/AngeEpza" target="_blank" data-toggle="tooltip" title="Twitter">
@@ -278,7 +278,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Marco Morales" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Marco2.jpg" alt="Marco Morales" />
                             <h4>Marco Morales</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/KGMorales19" target="_blank" data-toggle="tooltip" title="Twitter">
@@ -291,7 +291,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Sergio Diaz" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Sergio.jpg" alt="Sergio Diaz" />
                             <h4>Sergio Diaz</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sergiojulian" target="_blank" data-toggle="tooltip" title="Twitter">
@@ -307,7 +307,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/..." alt="Mario Gutiérrez">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Mario.jpg" alt="Mario Gutiérrez">
                             <h4>Mario Gutiérrez</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://marioagtzc.github.io/Portfolio/" target="_blank" data-toggle="tooltip" title="Portfolio">
