--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/Marco2.jpg" alt="Marco Morales" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Marco.jpg" alt="Marco Morales" />
                             <h4>Marco Morales</h4>
                             <p class="text-muted">Puesto</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/KGMorales19" target="_blank" data-toggle="tooltip" title="Twitter">
