Change social media

--- a/index.html
+++ b/index.html
@@ -227,19 +227,22 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/Kevin.jpg" alt="Kevin Deniz" />
                             <h4>Kevin Deniz</h4>
-                            <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">Project Manager</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/kevin-joel-deniz-celis-b594681a1/" target="_blank" data-toggle="tooltip" title="LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/Hector.jpg" alt="Hector Morales" />
-                            <h4>Hector Morales</h4>
-                            <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.researchgate.net/profile/Hector_Adan_Morales_Lugo" target="_blank" data-toggle="tooltip" title="ResearchGate">
-                                <i class="fab fa-researchgate"></i>
+                            <h4>M. Cs. Hector Morales</h4>
+                            <p class="text-muted">Project Manager</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/WoliamG" target="_blank" data-toggle="tooltip" title="Twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/hector-adan-morales-lugo-270563164/" target="_blank" data-toggle="tooltip" title="LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
                             </a>
                         </div>
                     </div>
@@ -248,9 +251,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/Diego.jpg" alt="Diego Ahumada" />
                             <h4>Diego Ahumada</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/DiegoA10" target="_blank" data-toggle="tooltip" title="Github">
+                                <i class="fab fa-github"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
@@ -258,9 +261,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/Paola.jpg" alt="Paola Santollo" />
                             <h4>Paola Santollo</h4>
                             <p class="text-muted">Puesto</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/PaoSantollo" target="_blank" data-toggle="tooltip" title="Github">
+                                <i class="fab fa-github"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
